monero_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     virtual std::vector<std::string> findWallets(const std::string &path) = 0;
extern ADDAPI const char* MONERO_WalletManager_findWallets(void* wm_ptr, const char* path, const char* separator);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* MONERO_WalletManager_errorString(void* wm_ptr);
//     virtual void setDaemonAddress(const std::string &address) = 0;
extern ADDAPI void MONERO_WalletManager_setDaemonAddress(void* wm_ptr, const char* address);
//     virtual bool connected(uint32_t *version = NULL) = 0;
//     virtual uint64_t blockchainHeight() = 0;
extern ADDAPI uint64_t MONERO_WalletManager_blockchainHeight(void* wm_ptr);
//     virtual uint64_t blockchainTargetHeight() = 0;
extern ADDAPI uint64_t MONERO_WalletManager_blockchainTargetHeight(void* wm_ptr);
//     virtual uint64_t networkDifficulty() = 0;
extern ADDAPI uint64_t MONERO_WalletManager_networkDifficulty(void* wm_ptr);
//     virtual double miningHashRate() = 0;
extern ADDAPI double MONERO_WalletManager_miningHashRate(void* wm_ptr);
//     virtual uint64_t blockTarget() = 0;
extern ADDAPI uint64_t MONERO_WalletManager_blockTarget(void* wm_ptr);
//     virtual bool isMining() = 0;
extern ADDAPI bool MONERO_WalletManager_isMining(void* wm_ptr);
//     virtual bool startMining(const std::string &address, uint32_t threads = 1, bool background_mining = false, bool ignore_battery = true) = 0;
extern ADDAPI bool MONERO_WalletManager_startMining(void* wm_ptr, const char* address, uint32_t threads, bool backgroundMining, bool ignoreBattery);
//     virtual bool stopMining() = 0;
extern ADDAPI bool MONERO_WalletManager_stopMining(void* wm_ptr, const char* address);
//     virtual std::string resolveOpenAlias(const std::string &address, bool &dnssec_valid) const = 0;
extern ADDAPI const char* MONERO_WalletManager_resolveOpenAlias(void* wm_ptr, const char* address, bool dnssec_valid);
//     static std::tuple<bool, std::string, std::string, std::string, std::string> checkUpdates(
//         const std::string &software,
//         std::string subdir,
//         const char *buildtag = nullptr,
//         const char *current_version = nullptr);
//     virtual bool setProxy(const std::string &address) = 0;
extern ADDAPI bool MONERO_WalletManager_setProxy(void* wm_ptr, const char* address);
// struct WalletManagerFactory
// {
//     enum LogLevel {
//         LogLevel_Silent = -1,
//         LogLevel_0 = 0,
//         LogLevel_1 = 1,
//         LogLevel_2 = 2,
//         LogLevel_3 = 3,
//         LogLevel_4 = 4,
//         LogLevel_Min = LogLevel_Silent,
//         LogLevel_Max = LogLevel_4
//     };
//     static WalletManager * getWalletManager();
extern ADDAPI void* MONERO_WalletManagerFactory_getWalletManager();
//     static void setLogLevel(int level);
extern ADDAPI void MONERO_WalletManagerFactory_setLogLevel(int level);
//     static void setLogCategories(const std::string &categories);
extern ADDAPI void MONERO_WalletManagerFactory_setLogCategories(const char* categories);
// };
// }

extern ADDAPI void MONERO_DEBUG_test0();
extern ADDAPI bool MONERO_DEBUG_test1(bool x);
extern ADDAPI int MONERO_DEBUG_test2(int x);
extern ADDAPI uint64_t MONERO_DEBUG_test3(uint64_t x);
extern ADDAPI void* MONERO_DEBUG_test4(uint64_t x);
extern ADDAPI const char* MONERO_DEBUG_test5();
extern ADDAPI const char* MONERO_DEBUG_test5_std();
extern ADDAPI bool MONERO_DEBUG_isPointerNull(void* wallet_ptr);
// cake world

extern ADDAPI void* MONERO_cw_getWalletListener(void* wallet_ptr);
extern ADDAPI void MONERO_cw_WalletListener_resetNeedToRefresh(void* cw_walletListener_ptr);
extern ADDAPI bool MONERO_cw_WalletListener_isNeedToRefresh(void* cw_walletListener_ptr);
extern ADDAPI bool MONERO_cw_WalletListener_isNewTransactionExist(void* cw_walletListener_ptr);
extern ADDAPI void MONERO_cw_WalletListener_resetIsNewTransactionExist(void* cw_walletListener_ptr);
extern ADDAPI uint64_t MONERO_cw_WalletListener_height(void* cw_walletListener_ptr);
extern ADDAPI void MONERO_free(void* ptr);
extern ADDAPI const char* MONERO_checksum_wallet2_api_c_h();
extern ADDAPI const char* MONERO_checksum_wallet2_api_c_cpp();
extern ADDAPI const char* MONERO_checksum_wallet2_api_c_exp();