impls/monero.rs/src/bindings.rs

extern "C" {
    pub fn MONERO_WalletManager_findWallets(
        wm_ptr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_WalletManager_errorString(
        wm_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_WalletManager_setDaemonAddress(
        wm_ptr: *mut ::std::os::raw::c_void,
        address: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_WalletManager_blockchainHeight(wm_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_WalletManager_blockchainTargetHeight(wm_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_WalletManager_networkDifficulty(wm_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_WalletManager_miningHashRate(wm_ptr: *mut ::std::os::raw::c_void) -> f64;
}
extern "C" {
    pub fn MONERO_WalletManager_blockTarget(wm_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_WalletManager_isMining(wm_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_WalletManager_startMining(
        wm_ptr: *mut ::std::os::raw::c_void,
        address: *const ::std::os::raw::c_char,
        threads: u32,
        backgroundMining: bool,
        ignoreBattery: bool,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_WalletManager_stopMining(
        wm_ptr: *mut ::std::os::raw::c_void,
        address: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_WalletManager_resolveOpenAlias(
        wm_ptr: *mut ::std::os::raw::c_void,
        address: *const ::std::os::raw::c_char,
        dnssec_valid: bool,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_WalletManager_setProxy(
        wm_ptr: *mut ::std::os::raw::c_void,
        address: *const ::std::os::raw::c_char,
    ) -> bool;
}
pub const LogLevel_Silent: ::std::os::raw::c_int = -1;
pub const LogLevel_0: ::std::os::raw::c_int = 0;
pub const LogLevel_1: ::std::os::raw::c_int = 1;
pub const LogLevel_2: ::std::os::raw::c_int = 2;
pub const LogLevel_3: ::std::os::raw::c_int = 3;
pub const LogLevel_4: ::std::os::raw::c_int = 4;
pub const LogLevel_Min: ::std::os::raw::c_int = -1;
pub const LogLevel_Max: ::std::os::raw::c_int = 4;
extern "C" {
    pub fn MONERO_WalletManagerFactory_getWalletManager() -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_WalletManagerFactory_setLogLevel(level: ::std::os::raw::c_int);
}
extern "C" {
    pub fn MONERO_WalletManagerFactory_setLogCategories(categories: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn MONERO_DEBUG_test0();
}
extern "C" {
    pub fn MONERO_DEBUG_test1(x: bool) -> bool;
}
extern "C" {
    pub fn MONERO_DEBUG_test2(x: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_DEBUG_test3(x: u64) -> u64;
}
extern "C" {
    pub fn MONERO_DEBUG_test4(x: u64) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_DEBUG_test5() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_DEBUG_test5_std() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_DEBUG_isPointerNull(wallet_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_cw_getWalletListener(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_cw_WalletListener_resetNeedToRefresh(
        cw_walletListener_ptr: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn MONERO_cw_WalletListener_isNeedToRefresh(
        cw_walletListener_ptr: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_cw_WalletListener_isNewTransactionExist(
        cw_walletListener_ptr: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_cw_WalletListener_resetIsNewTransactionExist(
        cw_walletListener_ptr: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn MONERO_cw_WalletListener_height(
        cw_walletListener_ptr: *mut ::std::os::raw::c_void,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_free(ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_checksum_wallet2_api_c_h() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_checksum_wallet2_api_c_cpp() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_checksum_wallet2_api_c_exp() -> *const ::std::os::raw::c_char;
}
